--- a/Practice_Activities/Practice_Activity_2.1/Titanic_Wrangling.html
+++ b/Practice_Activities/Practice_Activity_2.1/Titanic_Wrangling.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Isabella McCarty">
 
-<title>Lab 1: Gapminder Data Visualization</title>
+<title>Titanic Data Wrangling</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -3090,7 +3090,7 @@ vertical-align: -.125em;
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Lab 1: Gapminder Data Visualization</h1>
+<h1 class="title">Titanic Data Wrangling</h1>
 </div>
 
 
