--- a/Labs/Lab02/Lab02.html
+++ b/Labs/Lab02/Lab02.html
@@ -3113,7 +3113,8 @@ vertical-align: -.125em;
 </header>
 
 
-<p>Data Set-up</p>
+<section id="data-set-up" class="level2">
+<h2 class="anchored" data-anchor-id="data-set-up">Data Set-up</h2>
 <hr>
 <p>In this lab we’re going to be looking at avocado prices.</p>
 <p>The data set comes to us from Kaggle and represents weekly retail scan data. A description of the data can be found here:</p>
@@ -3803,6 +3804,7 @@ Name: count, dtype: int64</code></pre>
 </div>
 </div>
 </div>
+</section>
 </section>
 <section id="exercises" class="level2">
 <h2 class="anchored" data-anchor-id="exercises">Exercises</h2>
